Add my own informations and personalize website

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              Massively
-bio:                'Jekyll version of the Massively theme by HTML5UP'
-description:        "Jekyll version of the Massively theme by HTML5UP"
+title:              Mathieu Bolteau
+bio:                'Mathieu Bolteau'
+description:        "Mathieu Bolteau personal website"
 locale:             en_US
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
@@ -14,12 +14,13 @@ analytics-id:       "default"
 twitter:            default
 facebook:           default
 instagram:          default
-github:             default
+github:             "mablt"
+linkedin:           "mathieu-bolteau"
 
 # personal
-location:           Los Angeles, CA
-phone:              310-318-5555
-email:              info@default.com # change this to your email to receive free emails for your contact submissions via Slapform.com
+location:           Bordeaux, France
+phone:              +33 6 xx xx xx xx
+email:              mathieu.bolteau1@gmail.com # change this to your email to receive free emails for your contact submissions via Slapform.com
 
 # Other
 background_image:   /images/bg.jpg
@@ -31,12 +32,12 @@ defaults:
     path: ''
     type: posts
   values:
-    permalink: "/blog/:title/"
+    permalink: "/projets/:title/"
     layout: post
     author:
 
 # Jekyll
-permalink:          /blog/:title/
+permalink:          /projets/:title/
 markdown:           kramdown
 highlighter:        rouge
 kramdown:
@@ -59,7 +60,7 @@ gems:
   - jekyll-paginate
 
 paginate: 6
-paginate_path: "/blog/page:num/"
+paginate_path: "/projets/page:num/"
 
 jekyll-mentions:
     base_url: https://github.com
