--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'Mathieu Bolteau'
 description:        "Mathieu Bolteau personal website"
 locale:             en_US
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "mablt.github.io" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 
 # Comments
 disqus_shortname:   default
